--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,37 @@
-.App {
-  font-family: sans-serif;
+.home {
   text-align: center;
-  border-color: rgb(197, 197, 212);
+  color: rgba(60, 62, 90, 0.99);
+  background-color: rgb(30, 130, 197);
+  border-radius: 25px;
+  border-style: inherit;
+  padding: 10px;
+  text-transform: capitalize;
 }
 
 .counter-container {
   align-items: center;
   border: 10ox;
   border-radius: 10px;
-  border-color: rgb(167, 81, 232);
-  border-style: solid; 
+  border-color: rgb(27, 23, 31);
+  border-style: solid;
   border-width: 5px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   margin: 0 auto;
   text-align: center;
+  background-color: rgb(101, 129, 167);
+}
+h2{
+  color: rgb(228, 239, 134);
+  font-style: oblique;
+}
+
+p{
+  color: antiquewhite;
+  font-size: larger;
+  font-style: inherit;
+
 }
 
 .btn-container {
@@ -23,24 +39,23 @@
   gap: 1px;
   margin: 1px 0px;
   text-transform: capitalize;
-
-  
 }
 
 button {
+  color: #e7ed95;
   padding: 5px 5px;
   margin: 0 5px;
-  background-color: rgb(178, 120, 245);
+  background-color: rgb(58, 47, 85);
   border-radius: 10px;
   border: none;
   cursor: pointer;
-  }
+}
 
-button:hover{
+button:hover {
   box-shadow: 80px;
-  background-color: rgb(86, 6, 139);
- }
+  background-color: rgb(179, 169, 208);
+}
 
-input{
+input {
   margin: 10px 0px;
 }
